[tool.poetry]
name = "mec"
version = "0.1.0"
description = ""
authors = ["jx2lee <dev.jaejun.lee.1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7"
streamlit = "^1.19.0"
streamlit-ace = "^0.1.1"
httpx-oauth = "^0.11.0"
python-dotenv = "^1.0.0"
streamlit-embedcode = "^0.1.2"
streamlit-extras = "^0.2.6"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
